feat: enhance ResultService with improved result handling and add fallback cat image